testdata/baselines/reference/submodule/compiler/isolatedDeclarationErrorsObjects.errors.txt
isolatedDeclarationErrorsObjects.ts(1,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(2,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(3,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(6,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(7,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(10,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(11,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(12,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(14,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(15,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(16,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(20,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(21,5): error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(23,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(24,5): error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(25,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(27,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(28,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(29,9): error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(30,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(32,9): error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(38,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(39,9): error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(40,9): error TS7032: Property 'singleSetterBad' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
isolatedDeclarationErrorsObjects.ts(40,25): error TS7006: Parameter 'value' implicitly has an 'any' type.
isolatedDeclarationErrorsObjects.ts(40,25): error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(42,9): error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(62,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(63,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(65,16): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(66,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(67,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(71,19): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(73,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(74,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(76,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(77,5): error TS9016: Objects that contain shorthand properties can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(81,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(82,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(83,13): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrorsObjects.ts(86,8): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== isolatedDeclarationErrorsObjects.ts (41 errors) ====
    export let o = {
               ~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:1:12: Add a type annotation to the variable o.
        a: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:1:12: Add a type annotation to the variable o.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:2:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        b: ""
           ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:1:12: Add a type annotation to the variable o.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:3:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    export let oBad = {
               ~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:6:12: Add a type annotation to the variable oBad.
        a: Math.random(),
           ~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:6:12: Add a type annotation to the variable oBad.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:7:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    export const V = 1;
    export let oBad2 = {
               ~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
        a: {
           ~
            b: Math.random(),
    ~~~~~~~~~~~~~~~~~~~~~~~~~
               ~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:12:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        },
    ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:11:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        c: {
           ~
            d: 1,
    ~~~~~~~~~~~~~
               ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:15:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
            e: V,
    ~~~~~~~~~~~~~
               ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:16:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        }
    ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:10:12: Add a type annotation to the variable oBad2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:14:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    export let oWithMethods = {
               ~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:20:12: Add a type annotation to the variable oWithMethods.
        method() { },
        ~~~~~~
!!! error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:20:12: Add a type annotation to the variable oWithMethods.
!!! related TS9034 isolatedDeclarationErrorsObjects.ts:21:5: Add a return type to the method
        okMethod(): void { },
        a: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:20:12: Add a type annotation to the variable oWithMethods.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:23:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        bad() { },
        ~~~
!!! error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:20:12: Add a type annotation to the variable oWithMethods.
!!! related TS9034 isolatedDeclarationErrorsObjects.ts:24:5: Add a return type to the method
        e: V,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:20:12: Add a type annotation to the variable oWithMethods.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:25:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    export let oWithMethodsNested = {
               ~~~~~~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:27:12: Add a type annotation to the variable oWithMethodsNested.
        foo: {
             ~
            method() { },
    ~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~
!!! error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:27:12: Add a type annotation to the variable oWithMethodsNested.
!!! related TS9034 isolatedDeclarationErrorsObjects.ts:29:9: Add a return type to the method
            a: 1,
    ~~~~~~~~~~~~~
               ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:27:12: Add a type annotation to the variable oWithMethodsNested.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:30:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
            okMethod(): void { },
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            bad() { }
    ~~~~~~~~~~~~~~~~~
            ~~~
!!! error TS9008: Method must have an explicit return type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:27:12: Add a type annotation to the variable oWithMethodsNested.
!!! related TS9034 isolatedDeclarationErrorsObjects.ts:32:9: Add a return type to the method
        }
    ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:27:12: Add a type annotation to the variable oWithMethodsNested.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:28:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    
    
    
    export let oWithAccessor = {
               ~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:38:12: Add a type annotation to the variable oWithAccessor.
        get singleGetterBad() { return 0 },
            ~~~~~~~~~~~~~~~
!!! error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9032 isolatedDeclarationErrorsObjects.ts:39:9: Add a return type to the get accessor declaration.
        set singleSetterBad(value) { },
            ~~~~~~~~~~~~~~~
!!! error TS7032: Property 'singleSetterBad' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                            ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
                            ~~~~~
!!! error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9033 isolatedDeclarationErrorsObjects.ts:40:9: Add a type to parameter of the set accessor declaration.
    
        get getSetBad() { return 0 },
            ~~~~~~~~~
!!! error TS9009: At least one accessor must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9033 isolatedDeclarationErrorsObjects.ts:43:9: Add a type to parameter of the set accessor declaration.
!!! related TS9032 isolatedDeclarationErrorsObjects.ts:42:9: Add a return type to the get accessor declaration.
        set getSetBad(value) { },
    
        get getSetOk(): number { return 0 },
        set getSetOk(value) { },
    
        get getSetOk2() { return 0 },
        set getSetOk2(value: number) { },
        
        get getSetOk3(): number { return 0 },
        set getSetOk3(value: number) { },
    }
    
    function prop<T>(v: T): T { return v }
    
    const s: unique symbol = Symbol();
    const str: string = "";
    enum E {
        V = 10,
    }
    export const oWithComputedProperties = {
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:62:14: Add a type annotation to the variable oWithComputedProperties.
        [1]: 1,
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:62:14: Add a type annotation to the variable oWithComputedProperties.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:63:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        [1 + 3]: 1,
        [prop(2)]: 2,
                   ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:62:14: Add a type annotation to the variable oWithComputedProperties.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:65:16: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        [s]: 1,
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:62:14: Add a type annotation to the variable oWithComputedProperties.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:66:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        [E.V]: 1,
               ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:62:14: Add a type annotation to the variable oWithComputedProperties.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:67:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        [str]: 0,
    }
    
    const part = { a: 1 };
                      ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:71:7: Add a type annotation to the variable part.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:71:19: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
    export const oWithSpread = {
                 ~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:73:14: Add a type annotation to the variable oWithSpread.
        b: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:73:14: Add a type annotation to the variable oWithSpread.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:74:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        ...part,
        c: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:73:14: Add a type annotation to the variable oWithSpread.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:76:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        part,
        ~~~~
!!! error TS9016: Objects that contain shorthand properties can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:73:14: Add a type annotation to the variable oWithSpread.
    }
    
    
    export const oWithSpread2 = {
                 ~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:81:14: Add a type annotation to the variable oWithSpread2.
        b: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:81:14: Add a type annotation to the variable oWithSpread2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:82:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        nested: {
                ~
            ...part,
    ~~~~~~~~~~~~~~~~
        },
    ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:81:14: Add a type annotation to the variable oWithSpread2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:83:13: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        c: 1,
           ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsObjects.ts:81:14: Add a type annotation to the variable oWithSpread2.
!!! related TS9035 isolatedDeclarationErrorsObjects.ts:86:8: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    }
    